// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mouseout 1`] = `
Object {
  "children": Array [
    <span>
      <i
            className="fa fa-paper-plane-o"
            style={
                  Object {
                        "marginRight": "5px",
                      }
            }
      />
</span>,
    "Submit",
  ],
  "className": "btn btn-primary btn-outline",
  "onMouseOut": [Function],
  "onMouseOver": [Function],
  "style": Object {
    "cursor": "pointer",
  },
  "type": "submit",
}
`;

exports[`mouseover 1`] = `
Object {
  "children": Array [
    <span>
      <i
            className="fa fa-paper-plane-o"
            style={
                  Object {
                        "marginRight": "5px",
                      }
            }
      />
</span>,
    "Incomplete",
  ],
  "className": "btn btn-primary btn-outline",
  "onMouseOut": [Function],
  "onMouseOver": [Function],
  "style": Object {
    "cursor": "pointer",
  },
  "type": "submit",
}
`;

exports[`renders correctly 1`] = `
<button
  className="btn btn-primary"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
  type="submit"
>
  <span>
    <i
      className="fa fa-paper-plane-o"
      style={
        Object {
          "marginRight": "5px",
        }
      }
    />
  </span>
  Submit
</button>
`;
